<resources>
    <string name="app_name">Alpha Vetlog</string>
    <string name="app_ver">Alpha 1.1.2</string>
    <string name="err_email">Ingrese un correo valido</string>
    <string name="err_pass">Ingrese una contraseña valida 8 carcteres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingrese_su_correo_electronico">Ingrese su correo electronico</string>
    <string name="email">Email</string>
    <string name="err_tel">Ingrese un numero de telefono</string>
    <string name="err_dir">Ingrese una direccion</string>
    <string name="err_nom">Ingrese su nombre completo</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="title_activity_reg_mascota">regMascotaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="err_campova">No se puede dejar el campo vacio</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="errEle">Elemento no encontrado</string>
    <string name="title_activity_ges_mascotas">gesMascotasActivity</string>
    <string name="ingrese_la_dosis_del_medicamento">Ingrese la dosis del medicamento</string>

    <!-- String vacunas -->
    <string name="add_campaign">Añadir Campaña</string>
    <string name="new_campaign">Nueva Campaña</string>
    <string name="campaign_name">Nombre de la Campaña</string>
    <string name="species">Especie</string>
    <string name="start_date">Fecha de inicio</string>
    <string name="end_date">Fecha de finalización</string>
    <string name="location">Ubicación</string>
    <string name="notes">Notas</string>

    <string name="spinner_prompt">Selecciona una opción</string>
    <string-array name="spinner_items">
        <item>Casa</item>
        <item>Revision</item>
        <item>Operando</item>
        <item>Internado</item>
        <item>Estable</item>
    </string-array>

    <string name="save_campaign">Guardar Campaña</string>


</resources>