<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/bckimg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_header2"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pet_vaccination_image"
            android:contentDescription="TODO" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/bckimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_input_container"
        android:orientation="vertical"
        android:elevation="5dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        >

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_campaign"
            android:textColor="@color/Azultxt"
            android:textSize="24sp"
            android:textStyle="bold"
             />

            <EditText
                android:hint="@string/campaign_name"
                android:id="@+id/campaign_name_edit_text"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Azultxt"
                android:textColorHint="@color/Azultxt"
                android:textSize="16sp" />


            <Spinner
                android:id="@+id/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#30ffffff"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/Azultxt"
                android:textColorHint="@color/Azultxt"
                tools:ignore="SpeakableTextPresentCheck"/>

            <EditText
                android:id="@+id/location_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textColor="@color/Azultxt"
                android:textColorHint="@color/Azultxt"
                android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


                <EditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/start_date"
                    android:focusable="false"
                    android:textColor="@color/Azultxt"
                    android:textColorHint="@color/Azultxt"
                    android:textSize="16sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/Azultxt"
                android:textSize="26sp" />



                <EditText
                    android:id="@+id/end_date_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/end_date"
                    android:focusable="false"
                    android:textColor="@color/Azultxt"
                    android:textColorHint="@color/Azultxt"
                    android:textSize="16sp" />



        </LinearLayout>


            <EditText
                android:id="@+id/notes_edit_text"
                android:hint="@string/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Azultxt"
                android:textColorHint="@color/Azultxt"
                android:textSize="16sp" />



    </LinearLayout>
</ScrollView>
    <Button
        android:id="@+id/btnNuevaCamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:animation="@anim/pulse_animation"
        android:background="@drawable/btnredondo"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"
        android:text="@string/save_campaign"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_container"
        app:strokeColor="@color/azul_back"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:animation="@anim/pulse_animation"
        android:background="@drawable/btnredondo"
        android:gravity="center"
        android:visibility="gone"
        android:padding="16dp"
        android:text="Actualizar Campaña"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_container"
        app:strokeColor="@color/azul_back"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>